doc(setup-idea): consider the scenario of configuring authenticator in Java 11 for server (#326)
* chore: add qa for setup idea